# clodputer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_LOGGING_EXAMPLE.md  DEBUG_LOGGING_IMPROVEMENTS.md  HANDOFF.md  PYPI_PUBLISHING.md  README.md  email-management.yaml  pyproject.toml
.github/workflows/: ci.yml
Formula/: clodputer.rb
docs/dev/: architecture.md  contributing.md  packaging.md  release-notes-template.md  release.md  templates.md  testing.md
docs/implementation/: PROGRESS-v2.md  PROGRESS.md  README.md  onboarding-plan.md  phase1-critical-fixes.md  pre-launch-improvements.md
docs/planning/: 00-START-HERE.md  05-finalized-specification.md  06-user-experience.md  07-menu-bar-ui.md  08-installation-and-integration.md  09-safety-features.md  10-implementation-details.md  CLAUDE-MD-ADDITION.md  README.md  SUMMARY.md  claude-code-integration.md  intelligent-task-generation.md  interactive-task-manager.md  phase-5-6-priorities.md  roadmap-2025.md
docs/planning/archive/: 00-research-summary.md  README.md  (+5 more)
docs/release/: announcement-template.md
docs/testing/: ISSUES_AND_IMPROVEMENTS.md  TESTING_PRINCIPLES.md  test-run-001-fresh-install.md  test-run-002-onboarding-improvements.md  test-run-003-interactive-mode.md  test-run-004-end-to-end.md
docs/user/: cli-reference.md  configuration.md  faq.md  installation.md  mcp-authentication.md  quick-start.md  troubleshooting.md  uninstall.md
scripts/: update_homebrew_formula.py
src/clodputer/: __init__.py  catch_up.py  cleanup.py  cli.py  config.py  cron.py  dashboard.py  debug.py  debug_viewer.py  dependencies.py  diagnostics.py  environment.py  executor.py  formatting.py  logger.py  manager.py  menubar.py  metrics.py  onboarding.py  queue.py  reports.py  settings.py  state.py  task_state.py  validation.py  watcher.py
templates/: README.md  calendar-sync.yaml  daily-email.yaml  file-watcher.yaml  manual-task.yaml  todo-triage.yaml
tests/: conftest.py  test_catch_up.py  test_cli.py  test_config.py  test_cron.py  test_debug.py  test_dependencies.py  test_diagnostics.py  test_executor.py  test_intelligent_task_generation.py  test_logger.py  test_menubar.py  test_metrics.py  test_onboarding.py  test_onboarding_claude_cli.py  test_onboarding_environment.py  test_onboarding_integration.py  test_onboarding_phases.py  test_onboarding_utils.py  test_queue.py  test_reports.py  test_settings.py  test_state.py  test_templates.py  test_validation.py  test_watcher.py
(+5 files in other folders)
