[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clodputer"
version = "0.1.0"
description = "Autonomous Claude Code automation system"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rémy Olson", email = "olson.remy@gmail.com"}
]
keywords = ["claude", "automation", "ai", "assistant", "cron"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]

dependencies = [
    "click>=8.0.0,<9.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "psutil>=6.0.0,<7.0.0",
    "watchdog>=4.0.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rumps>=0.4.0,<0.5.0; sys_platform == 'darwin'",
    "croniter>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/remyolson/clodputer"
Documentation = "https://github.com/remyolson/clodputer/tree/main/docs/planning"
Repository = "https://github.com/remyolson/clodputer"
Issues = "https://github.com/remyolson/clodputer/issues"

[project.scripts]
clodputer = "clodputer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clodputer = ["templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=clodputer --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/clodputer"]
omit = [
    "src/clodputer/cli.py",
    "src/clodputer/cleanup.py",
    "src/clodputer/menubar.py",
    "src/clodputer/dashboard.py",
    "src/clodputer/watcher.py",
]

[tool.coverage.report]
skip_empty = true
